fix: horizontal scroll

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -5,6 +5,7 @@ html {
   box-sizing: border-box;
   overflow-y: scroll;
 }
+
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
@@ -14,7 +15,9 @@ body {
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
+  padding: 0 8px;
 }
+
 button {
   font-family: 'Red Hat Display';
   font-weight: 500;
